--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="document">Document</string>
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
-    <string name="to_delete_pdf">Do you want to delete pdf file?</string>
+    <string name="to_delete_pdf">Do you want to delete the pdf file?</string>
     <string name="share">Share</string>
     <string name="no_pdf_documents">No PDF documents</string>
 
