--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="to_delete_pdf">Do you want to delete the pdf file?</string>
     <string name="share">Share</string>
     <string name="no_pdf_documents">No PDF documents</string>
+    <string name="save_to">Save to</string>
+    <string name="saved">Saved</string>
 
 
 </resources>
